# oja

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package-lock.json  package.json  tsconfig.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml
contracts/: Cargo.toml  Odra.toml
contracts/src/: lib.rs  price_registry.rs
contracts/wasm/: PriceRegistry.wasm
scripts/: deploy-token.sh  fund-buyers.sh  keygen.mjs  run-all.mjs
scripts/livenet/: attest.mjs  common.mjs  deploy-registry.mjs  deploy-token.mjs  fund-buyers.mjs  fund.mjs  register-endpoint.mjs  status.mjs
